smokeping/smokeping-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  namespace: smokeping
spec:
  ports:
  - name: smokeping
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    pod-label: smokeping
