smokeping/smokeping-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping
  namespace: smokeping
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`smokeping.demo.com`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
